# PepperBot

./: .coverage  .gitignore  .travis.yml  404.html  LICENSE  README.md  deploy.sh  index.html  opensearch.xml  package-lock.json  pyproject.toml  sitemap.xml  test.py
.github/workflows/: deploy.yml
Action/: introduction.html
Command/: introduction.html
Event/: kwargs.html  lifecycle.html  mixin.html  notExist.html
InAction/: sql.html  tuning.html
Introduction/: about.html  install.html  motivation.html
Plugin/: official.html
archive/: market.yaml
assets/: Action_introduction.md.0a42c853.js  Action_introduction.md.0a42c853.lean.js  Action_introduction.md.a5e559b7.js  Action_introduction.md.a5e559b7.lean.js  Action_introduction.md.b495731a.js  Action_introduction.md.b495731a.lean.js  Action_introduction.md.d819cf41.js  Action_introduction.md.d819cf41.lean.js  Command_introduction.md.1558030c.js  Command_introduction.md.1558030c.lean.js  Command_introduction.md.6562db82.js  Command_introduction.md.6562db82.lean.js  Command_introduction.md.b52a2352.js  Command_introduction.md.b52a2352.lean.js  Command_introduction.md.d06f139d.js  Command_introduction.md.d06f139d.lean.js  Command_introduction.md.fa8d67e5.js  Command_introduction.md.fa8d67e5.lean.js  Event_kwargs.md.060741be.js  Event_kwargs.md.060741be.lean.js  Event_kwargs.md.0c88ad0a.js  Event_kwargs.md.0c88ad0a.lean.js  Event_kwargs.md.470343a0.js  Event_kwargs.md.470343a0.lean.js  Event_kwargs.md.5d3485a3.js  Event_kwargs.md.5d3485a3.lean.js  Event_kwargs.md.fa63bfec.js  Event_kwargs.md.fa63bfec.lean.js  Event_lifecycle.md.5b5f87a7.js  Event_lifecycle.md.5b5f87a7.lean.js  Event_lifecycle.md.6676d9f6.js  Event_lifecycle.md.6676d9f6.lean.js  Event_lifecycle.md.7b6e2db7.js  Event_lifecycle.md.7b6e2db7.lean.js  Event_lifecycle.md.a3645852.js  Event_lifecycle.md.a3645852.lean.js  Event_lifecycle.md.d631245d.js  Event_lifecycle.md.d631245d.lean.js  Event_mixin.md.1540bb94.js  Event_mixin.md.5ba66e9b.js  (+87 more)
assets/css/: styles.3a59e080.css  styles.9d5162c5.css  styles.da5cc4c5.css
assets/js/: 00b26b23.0c4d2c58.js  00b26b23.ee9bc662.js  00cb15bf.78de173d.js  00cb15bf.deee3347.js  02e22c9f.18ae92f5.js  02e22c9f.841b1169.js  032f24a3.33d694df.js  032f24a3.afa0ac86.js  032f24a3.db110956.js  03e94547.fef1afa8.js  068ec7bd.deb6183f.js  068f18d5.205fee79.js  068f18d5.329fd4bb.js  068f18d5.6e79d01b.js  068f18d5.96a31442.js  068f18d5.b5881e57.js  068f18d5.bfd20ebe.js  068f18d5.ea08dcf9.js  0a00762d.039ec6b6.js  0bbf0e9e.33eb05c7.js  0bbf0e9e.3ac8447a.js  0bbf0e9e.53b9512e.js  0bbf0e9e.5a65ff45.js  0bbf0e9e.67cfc791.js  0bbf0e9e.7a9b4fd8.js  0bbf0e9e.80ce5c19.js  0bbf0e9e.c2ee2576.js  0bbf0e9e.e1bdac56.js  0bbf0e9e.ff704073.js  0cf2835b.91d0f092.js  0f23a2a9.89deb09f.js  0f23a2a9.91e85222.js  0f23a2a9.ab171bf7.js  0f546435.3cd2c5b0.js  0f546435.6867504b.js  0f546435.73cf5227.js  0f546435.91ac346d.js  0f546435.ab52a1c6.js  0f546435.c9176316.js  0f546435.d67ae847.js  (+1736 more)
blog/: atom.xml  rss.xml
capabilities/pepperbot_gpt_example/: README.md  pyproject.toml
capabilities/pepperbot_gpt_example/src/: __init__.py  config.py  main.py  models.py  utils.py
cli/: __init__.py
demos/: .env  1.py  1群消息事件响应.py  5主动行为.py  test.py  常见任务.py  构造消息.py  群消息事件响应.py
demos/action/: 10.py  11.py  21.py  5主动行为.py  9.py  定时任务.py  课程表.py
demos/command/: 对话式指令_Pettern校验.py  指令菜单.py
demos/event/: 群消息事件响应.py
demos/message/: 构造消息.py
demos/示例/: 一次性任务.py  定时任务.py  对话式指令_手动校验.py  查询装备.py  消息转发.py  群消息事件响应.py  课程表.py
docs/: docusaurus.config.js  index.md  package.json  pnpm-lock.yaml  sidebars.js  tsconfig.json
docs/.vitepress/: config.js
docs/API/: index.html
docs/Action/: introduction.md
docs/CHANGELOG/: index.html
docs/Command/: introduction.md
docs/Event/: kwargs.md
docs/Introduction/: about.md  install.md  motivation.md
docs/contribution/: index.html
docs/docs/: CHANGELOG.md
docs/event/: index.html
docs/examples/: index.html
docs/index/: index.html
docs/tutorial/: index.html
docs/事件/: index.html
docs/参与开发/: index.html
docs/实战/: index.html
docs/教程/: index.html
docs/概览/: index.html  动机.md  安装.md
docs/示例/: index.html
docs/贡献指南/: index.html
helloMarkdown/: index.html
helloReact/: index.html
markdown-page/: index.html
market/: index.html
pepperbot/: __init__.py  config.py  exceptions.py  globals.py  initial.py  main.py  types.py
pepperbot/action/: 1.py  __init__.py  chain.py  runner.py
pepperbot/command/: __init__.py  commands.py  handle.py  parse.py  pattern.py
pepperbot/exceptions/: __init__.py
pepperbot/message/: chain.py  segment.py  utils.py
pepperbot/models/: __init__.py  friend.py  stranger.py  user.py
pepperbot/parse/: __init__.py  bots.py  cache.py  figure.py  kwargs.py
pepperbot/store/: __init__.py  command.py  event.py  meta.py  orm.py
pepperbot/utils/: action.py  common.py  mixins.py
scripts/: benchmark.py  copy123.py  gen_doc.py
scripts/docs/: generate.py  markdown.py  utils.py
search/: index.html
src/: __init__.py  globals.py  main.py  types.py
src/Action/: Bot.py  Runner.py  decorators.py  main.py
src/Bots/: Bots.py
src/Command/: __init__.py  commands.py  handle.py  parse.py
src/Events/: MetaEvent.py
src/Exceptions/: __init__.py
src/Message/: MessageChain.py  MessageSegment.py  PokeTypes.py
src/Mixins/: Mixins.py
src/Models/: __init__.py  user.py
store/: index.html
tests/: .env  __init__.py  conftest.py  context.py  is_flash.py  messageChain.py  parse_pattern.py  pattern.py  tempCodeRunnerFile.py  test_messageChain.py  tree.py  utils.py
(+491 files in other folders)
