[project]
authors = [{ name = "SSmJaE", email = "ssmjae327@gmail.com" }]
classifiers = ["Programming Language :: Python"]
dependencies = [
    "APScheduler>=3.10.1",
    "Pyrogram>=2.0.102",
    "TgCrypto>=1.2.5",
    "arrow>=1.2.3",
    "better-exceptions>=0.3.3",
    "devtools>=0.10.0",
    "httpx>=0.23.3",
    "loguru>=0.6.0",
    "pydantic>=1.10.6",
    "python-dotenv>=1.0.0",
    "rich>=13.3.2",
    "sanic>=22.12.0",
]
description = "An intuitive multi-platform bot framework, easily forward messages among platforms, support QQ, WeChat, Telegram. 一个符合直觉的跨社交平台机器人框架，轻松地在平台间传递消息，支持QQ、微信、Telegram"
keywords = [
    "Telegram",
    "async",
    "asyncio",
    "bot",
    "chinese",
    "cqhttp",
    "cross-platform",
    "framework",
    "keaimao",
    "onebot",
    "pydantic",
    "pyrogram",
    "python",
    "qq",
    "type-annotations",
    "type-hint",
    "wechat",
]
license = { text = "MIT" }
name = "pepperbot"
readme = "README.md"
requires-python = ">=3.10"
version = "0.3.2"

# TODO 之后再优化这个问题，现在和逻辑嵌套过深
# [project.optional-dependencies]
# telegram = ["Pyrogram>=2.0.102", "TgCrypto>=1.2.5"]

[project.urls]
documentation = "https://SSmJaE.github.io/PepperBot"
homepage      = "https://github.com/SSmJaE/PepperBot"
repository    = "https://github.com/SSmJaE/PepperBot"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

# [project.scripts]
# pepperbot = "cli:main"

[build-system]
build-backend = "pdm.backend"
requires      = ["pdm-backend"]

[tool.pdm.build]
includes = ["cli", "pepperbot"]

[tool.pdm]
[tool.pdm.dev-dependencies]
test = ["pytest-cov>=4.0.0", "pytest>=7.2.2"]

[tool.pdm.scripts]
badge = """\
pytest --cov-report xml --cov-branch --cov=pepperbot ./tests/command/test_parse.py \
&& deactive \
&& genbadge coverage -i ./coverage.xml \
"""
run = "python private/run.py"
test = "pytest --cov-report html --cov-branch --cov=pepperbot ./tests"
